--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="pgLoadGame">
         <header>
-            <h2><button onclick="fnNavMenus('#pgLoadGame', '#pgWelcome');">Back</button><br>Load Game</h2>
+            <h1><button onclick="fnNavMenus('#pgLoadGame', '#pgWelcome');">Back</button><br>Load Game</h1>
         </header>
         <main>
             <p id="pLGPartyMessage">&nbsp;</p>
@@ -70,7 +70,6 @@
             <h1>Foggy Mountain Tavern</h1>
         </header>
         <main>
-            <!-- Placeholders to display message, party info, enemy/NPC info, "results" -->
             <p id="pTvnMsg">&nbsp;</p>
             <p id="pTvnParty">&nbsp;</p>
             <p id="pTvnAction">&nbsp;</p>
@@ -98,6 +97,71 @@
             <h4>Load | Quit</h4>
         </footer>
     </section> <!-- END #pgForest -->
+
+    <section id="pgLake">
+        <header>
+            <h1>Lake</h1>
+        </header>
+        <main>
+            <p id="pLakMsg">&nbsp;</p>
+            <p id="pLakParty">&nbsp;</p>
+            <!-- Flip the following two for better user experience -->
+            <p id="pLakEnemy">&nbsp;</p>
+            <p id="pLakAction">&nbsp;</p>
+            <p id="pLakResults">&nbsp;</p>
+        </main>
+        <footer style="text-align: center;">
+            <h4>Load | Quit</h4>
+        </footer>
+    </section> <!-- END #pgLake -->
+
+    <section id="pgMountain">
+        <header>
+            <h1>Mountain</h1>
+        </header>
+        <main>
+            <p id="pMntMsg">&nbsp;</p>
+            <p id="pMntParty">&nbsp;</p>
+            <p id="pMntAction">&nbsp;</p>
+            <p id="pMntEnemy">&nbsp;</p>
+            <p id="pMntResults">&nbsp;</p>
+        </main>
+        <footer style="text-align: center;">
+            <h4>Load | Quit</h4>
+        </footer>
+    </section> <!-- END #pgMountain -->
+
+    <section id="pgBridge">
+        <header>
+            <h1>Bridge</h1>
+        </header>
+        <main>
+            <p id="pBrdgMsg">&nbsp;</p>
+            <p id="pBrdgParty">&nbsp;</p>
+            <p id="pBrdgAction">&nbsp;</p>
+            <p id="pBrdgEnemy">&nbsp;</p>
+            <p id="pBrdgResults">&nbsp;</p>
+        </main>
+        <footer style="text-align: center;">
+            <h4>Load | Quit</h4>
+        </footer>
+    </section> <!-- END #pgLake -->
+
+    <section id="pgNEWW">
+        <header>
+            <h1>NEWW</h1>
+        </header>
+        <main>
+            <p id="pLakMsg">&nbsp;</p>
+            <p id="pLakParty">&nbsp;</p>
+            <p id="pLakEnemy">&nbsp;</p>
+            <p id="pLakAction">&nbsp;</p>
+            <p id="pLakResults">&nbsp;</p>
+        </main>
+        <footer style="text-align: center;">
+            <h4>Load | Quit</h4>
+        </footer>
+    </section> <!-- END #pgNEWW -->
 
     <script type="module" src="../js/game.js" defer></script>
 </body>
